--- a/library.html
+++ b/library.html
@@ -1,160 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Sitegen Library</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sitegen – Library</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
-<body class="bg-white text-black min-h-screen flex flex-col">
-  <!-- Header -->
+<body class="bg-white text-black">
+  <!-- Navbar -->
   <header class="p-4 border-b flex justify-between items-center">
-    <h1 class="text-2xl font-bold">Sitegen Library</h1>
-    <nav>
-      <a href="index.html" class="px-4 py-2 bg-black text-white rounded">Home</a>
-    </nav>
+    <h1 class="text-2xl font-bold">📚 Sitegen Library</h1>
+    <div class="space-x-3">
+      <a href="index.html" class="px-4 py-2 bg-black text-white rounded">🏠 Home</a>
+      <label class="px-4 py-2 bg-black text-white rounded cursor-pointer">
+        ⬆ Upload Template
+        <input type="file" id="fileInput" accept=".html" hidden />
+      </label>
+    </div>
   </header>
 
-  <!-- Main -->
-  <main class="flex-1 p-6 max-w-6xl mx-auto w-full">
-    <!-- Upload Section -->
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-4">Upload New Item</h2>
-      <div class="flex flex-col md:flex-row gap-3 md:items-center">
-        <select id="category" class="border px-3 py-2 rounded">
-          <option value="Template">Template</option>
-          <option value="Block">Block</option>
-          <option value="Theme">Theme</option>
-          <option value="Subscription Box">Subscription Box</option>
-        </select>
-        <input type="file" id="fileInput" class="border px-3 py-2 rounded bg-white">
-        <button onclick="uploadItem()" class="bg-black text-white px-4 py-2 rounded">Upload</button>
-      </div>
+  <!-- Progress -->
+  <div id="progressContainer" class="hidden w-1/2 mx-auto mt-6">
+    <div class="bg-gray-200 rounded-full h-4">
+      <div id="progressBar" class="bg-black h-4 rounded-full w-0 text-white text-xs text-center">0%</div>
+    </div>
+  </div>
 
-      <!-- Progress Bar -->
-      <div id="progressBox" class="hidden mt-4 w-full">
-        <p id="progressText" class="text-sm">Uploading 0%</p>
-        <div class="w-full bg-gray-200 rounded h-2 mt-1">
-          <div id="progressBar" class="bg-black h-2 rounded" style="width:0%"></div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Library Section -->
-    <section>
-      <h2 class="text-xl font-semibold mb-4">Library Items</h2>
-      <div id="libraryItems" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-    </section>
+  <!-- Library grid -->
+  <main class="p-6">
+    <div id="libraryItems" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
   </main>
 
   <script>
-    // Fake smooth progress bar
-    function fakeProgress(cb) {
-      let percent = 0;
-      const interval = setInterval(() => {
-        percent += 5;
-        if (percent > 90) clearInterval(interval);
-        cb(percent);
-      }, 120);
-      return interval;
-    }
+    const fileInput = document.getElementById("fileInput");
+    const progressContainer = document.getElementById("progressContainer");
+    const progressBar = document.getElementById("progressBar");
+    const libraryItems = document.getElementById("libraryItems");
 
-    function updateProgress(percent) {
-      document.getElementById("progressText").textContent = `Uploading ${percent}%`;
-      document.getElementById("progressBar").style.width = percent + "%";
-    }
+    let library = JSON.parse(localStorage.getItem("sitegenLibrary")) || [];
 
-    function uploadItem() {
-      const category = document.getElementById("category").value;
-      const fileInput = document.getElementById("fileInput");
-      if (!fileInput.files.length) return alert("Please select a file.");
-
-      const file = fileInput.files[0];
-      const reader = new FileReader();
-
-      document.getElementById("progressBox").classList.remove("hidden");
-      let fake = fakeProgress(updateProgress);
-
-      reader.onload = function(e) {
-        clearInterval(fake);
-        updateProgress(100);
-
-        const content = e.target.result;
-        const name = file.name.replace(/\.[^/.]+$/, "");
-
-        // Create hidden iframe for rendering
-        const iframe = document.createElement("iframe");
-        iframe.style.position = "absolute";
-        iframe.style.left = "-9999px";
-        iframe.style.top = "-9999px";
-        iframe.style.width = "1200px";
-        iframe.style.height = "800px";
-        document.body.appendChild(iframe);
-
-        iframe.contentDocument.open();
-        iframe.contentDocument.write(content);
-        iframe.contentDocument.close();
-
-        // Give time for assets to load
-        setTimeout(() => {
-          html2canvas(iframe.contentDocument.body, { useCORS:true, scale:0.3 }).then(canvas => {
-            const preview = canvas.toDataURL("image/png");
-
-            const newItem = { name, category, content, preview };
-            const library = JSON.parse(localStorage.getItem("sitegenLibrary")) || [];
-            library.push(newItem);
-            localStorage.setItem("sitegenLibrary", JSON.stringify(library));
-
-            loadLibrary();
-            iframe.remove();
-          });
-        }, 1000);
-      };
-      reader.readAsText(file);
-    }
-
-    function loadLibrary() {
-      const library = JSON.parse(localStorage.getItem("sitegenLibrary")) || [];
-      const container = document.getElementById("libraryItems");
-      container.innerHTML = "";
-      library.forEach((item, idx) => {
+    function renderLibrary() {
+      libraryItems.innerHTML = "";
+      library.forEach((item, index) => {
         const card = document.createElement("div");
-        card.className = "border rounded-lg shadow p-4 flex flex-col bg-white";
+        card.className = "border rounded-lg p-4 shadow";
 
-        const img = document.createElement("img");
-        img.src = item.preview || "";
-        img.alt = item.name;
-        img.className = "w-full h-48 object-contain rounded mb-3 bg-gray-50";
+        card.innerHTML = `
+          <div class="relative border rounded overflow-hidden w-full h-48 bg-gray-100 flex items-center justify-center">
+            <img src="${item.thumbnail}" 
+                 class="draggable-img absolute cursor-move transform scale-1" 
+                 data-index="${index}" 
+                 style="top:0; left:0;"/>
+          </div>
+          <h2 class="font-semibold mt-2">${item.name}</h2>
+          <div class="flex space-x-2 mt-2">
+            <button class="zoom-in px-2 py-1 bg-black text-white rounded text-sm" data-index="${index}">＋</button>
+            <button class="zoom-out px-2 py-1 bg-black text-white rounded text-sm" data-index="${index}">－</button>
+            <button class="save-thumb px-2 py-1 bg-black text-white rounded text-sm" data-index="${index}">💾 Save</button>
+          </div>
+        `;
 
-        const title = document.createElement("h3");
-        title.className = "font-semibold text-lg mb-1";
-        title.textContent = item.name;
+        libraryItems.appendChild(card);
+      });
+      enableDragZoom();
+    }
 
-        const cat = document.createElement("p");
-        cat.className = "text-sm text-gray-600 mb-3";
-        cat.textContent = item.category;
+    function enableDragZoom() {
+      document.querySelectorAll(".draggable-img").forEach(img => {
+        let isDragging = false, startX, startY, initialX, initialY, scale = 1;
 
-        const btn = document.createElement("button");
-        btn.className = "bg-black text-white px-4 py-2 rounded";
-        btn.textContent = "Remove";
-        btn.onclick = () => removeItem(idx);
+        img.addEventListener("mousedown", (e) => {
+          isDragging = true;
+          startX = e.clientX;
+          startY = e.clientY;
+          const rect = img.getBoundingClientRect();
+          initialX = rect.left;
+          initialY = rect.top;
+          img.style.transition = "none";
+        });
 
-        card.appendChild(img);
-        card.appendChild(title);
-        card.appendChild(cat);
-        card.appendChild(btn);
-        container.appendChild(card);
+        document.addEventListener("mousemove", (e) => {
+          if (!isDragging) return;
+          const dx = e.clientX - startX;
+          const dy = e.clientY - startY;
+          img.style.transform = `translate(${dx}px, ${dy}px) scale(${scale})`;
+        });
+
+        document.addEventListener("mouseup", () => {
+          isDragging = false;
+        });
+
+        // Zoom buttons
+        const index = img.dataset.index;
+        document.querySelector(`.zoom-in[data-index="${index}"]`).onclick = () => {
+          scale += 0.1;
+          img.style.transform = `scale(${scale})`;
+        };
+        document.querySelector(`.zoom-out[data-index="${index}"]`).onclick = () => {
+          if (scale > 0.3) scale -= 0.1;
+          img.style.transform = `scale(${scale})`;
+        };
+
+        // Save thumbnail
+        document.querySelector(`.save-thumb[data-index="${index}"]`).onclick = () => {
+          const canvas = document.createElement("canvas");
+          const card = img.parentElement;
+          canvas.width = card.clientWidth;
+          canvas.height = card.clientHeight;
+          const ctx = canvas.getContext("2d");
+
+          const tempImg = new Image();
+          tempImg.src = img.src;
+          tempImg.onload = () => {
+            ctx.drawImage(tempImg, 0, 0, canvas.width, canvas.height);
+            const finalThumb = canvas.toDataURL();
+            library[index].thumbnail = finalThumb;
+            localStorage.setItem("sitegenLibrary", JSON.stringify(library));
+            renderLibrary();
+          };
+        };
       });
     }
 
-    function removeItem(idx) {
-      const library = JSON.parse(localStorage.getItem("sitegenLibrary")) || [];
-      library.splice(idx, 1);
-      localStorage.setItem("sitegenLibrary", JSON.stringify(library));
-      loadLibrary();
-    }
+    fileInput.addEventListener("change", async (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
 
-    window.onload = loadLibrary;
+      progressContainer.classList.remove("hidden");
+      progressBar.style.width = "0%";
+      progressBar.innerText = "0%";
+
+      const reader = new FileReader();
+      reader.onload = async (ev) => {
+        progressBar.style.width = "50%";
+        progressBar.innerText = "50%";
+
+        const htmlContent = ev.target.result;
+        const iframe = document.createElement("iframe");
+        iframe.style.position = "absolute";
+        iframe.style.left = "-9999px";
+        document.body.appendChild(iframe);
+        iframe.contentDocument.open();
+        iframe.contentDocument.write(htmlContent);
+        iframe.contentDocument.close();
+
+        setTimeout(async () => {
+          const canvas = await html2canvas(iframe.contentDocument.body);
+          const thumbnail = canvas.toDataURL();
+          library.push({ name: file.name, html: htmlContent, thumbnail });
+          localStorage.setItem("sitegenLibrary", JSON.stringify(library));
+          document.body.removeChild(iframe);
+          progressBar.style.width = "100%";
+          progressBar.innerText = "100%";
+          setTimeout(() => progressContainer.classList.add("hidden"), 800);
+          renderLibrary();
+        }, 800);
+      };
+      reader.readAsText(file);
+    });
+
+    renderLibrary();
   </script>
 </body>
 </html>
